--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,7 +146,7 @@ span{
     text-align: center;
 }
 .centered-title p{
-    padding: 50px 0px;
+    padding: 30px 0px;
 }
 
 .flexbox{
@@ -207,6 +207,11 @@ span{
 .carousel-inner img{
     height: 100px;
     margin: auto;
+}
+
+.timeline{
+    height: 400px;
+    margin-top: -100px;
 }
 
 footer{
