--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,16 +40,14 @@ nav > div{
     z-index: 999;
 }
 
-.menuHover a:hover{
+.menu-hover a:hover{
     text-decoration: none;
     border-left: 1px white solid;
     border-right: 1px white solid;
 }
 
-#dropdown{
-    display: none;
-}
-
+#dropdown{display: none;}
+/* SCROLLBAR */
 ::-webkit-scrollbar-track{box-shadow: inset 0 0 6px rgba(0,0,0,0.3);}
 ::-webkit-scrollbar{width: 12px;}
 ::-webkit-scrollbar-thumb{background-color: #1a1a1a;}
@@ -58,13 +56,16 @@ header{
     height: 100vh;
     padding-left: 30%;
 }
+
+/* HEADER HOVER-EFFEKT */
 .text-stroke{
     font-family: 'Montserrat', sans-serif;
     -webkit-text-stroke: white 5px;
     cursor: default;
-    font-size: 20vh;
+    font-size: 10vw;
     transition: .5s;
 }
+
 .text-stroke:hover{
     color: white;
 }
@@ -87,12 +88,16 @@ h1, h2, h3, p{
 h2,h3{font-family: 'Libre Baskerville', serif;}
 h2{font-size: 40px;}
 h3{font-size: 32px;}
+p{font-size: 20px;}
+
+.highlight{color: #e9c534;}
 
 a{
     text-decoration: none;
     color: #335A96;
 }
 
+/* KONTAKT KNAPP */
 .contact {
     height: 40px;
 }
@@ -116,12 +121,6 @@ a{
     transform: scale(1.2);
 }
 
-p{
-    font-size: 20px;
-}
-
-.highlight{color: #e9c534;}
-
 .intro{
     text-align: center;
     margin: auto;
@@ -136,6 +135,7 @@ p{
     padding: 100px 0px;
 }
 
+/* TELEFONEN */
 .phone-element{
     width: 35%;
     margin: auto;
@@ -160,15 +160,18 @@ p{
 }
 
 .service{
-    height: 60%;
-    padding-top: 20px;
+    transition: .2s;
+}
+
+.service-element{
     border-top: black solid 2px;
+    padding-top: 20px;
     display: grid;
     grid-template-columns: 20% 60%;
     grid-template-rows: 40% 40%;
     row-gap: 20%;
 }
-.service > a{
+.service-element > a{
     grid-column-start: 2;
 }
 
@@ -180,15 +183,17 @@ p{
 }
 
 .screen{
+    display: none;
     z-index: 2;
     position: absolute;
     left: 11px;
     top: 58px;
 
-    height: 430px;
+    height: 428px;
     width: 242px;
 }
 
+/* IKON STORLEK */
 .icon{
     width: 40px;
 }
@@ -207,6 +212,7 @@ p{
     align-items: center;
 }
 
+/* PORTFOLIO KORT */
 .cards{
     border-top: 2px white solid;
     padding: 80px 0px;
@@ -244,6 +250,8 @@ p{
     margin-top: 15px;
 }
 
+
+/* KORT BORDER */
 .border-short{
     padding: 10px;
     position: relative;
@@ -257,11 +265,13 @@ p{
     border-bottom: 2px #1a1a1a solid;
 }
 
+/* CAROUSEL */
 .carousel-indicators{
     top: 120px;
     width: 200px;
     margin: auto;
 }
+
 .carousel-indicators li{
     height: 10px;
     width: 10px;
@@ -269,50 +279,115 @@ p{
     background-color: #999999;
     border-radius: 50%;
 }
+
 #carousel{
     width: 200px;
     margin: 120px auto 0px;
 }
+
 .carousel-inner img{
     height: 100px;
     margin: auto;
 }
 
-.timeline{
-    height: 400px;
+/* TIMELINE */
+.timeline-container{
     margin-top: -100px;
 }
 
+.timeline{
+    height: 660px;
+    margin-top: 40px;
+}
+
+.swiper-container{
+    height: 100%;
+    width: 100%;
+}
+
+.swiper-slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.swiper-slide .text, .swiper-slide .year{
+    opacity: 0;
+    transition: .2s;
+}
+
+.swiper-slide-active > .marker > *{
+    background-color: #00a19b;
+}
+
+.swiper-slide-active .text, .swiper-slide-active .year{
+    opacity: initial;
+}
+
+.line{
+    background-color: #999999;
+    height: 100%;
+    width: 1px;
+    margin-left: 8px;
+}
+
+.dot{
+    background-color: #999999;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+}
+
+.text{
+    width: 80%;
+    position: absolute;
+    top: 400px;
+    left: 350px;
+}
+
+.year{
+    position: absolute;
+    top: 400px;
+    left: -180px;
+}
+.year h3{font-size: 180px;}
+
+/* FORM */
 form > *{
     background-color: #fdfdfd;
     margin-bottom: 20px;
     width: 100%;
 }
+
 input, textarea{
     border: none;
     border-bottom: 1px solid #1a1a1a;
     padding: 20px 0px 2px 2px;
     outline: none;
 }
+
 input[type=checkbox]{
     cursor: pointer;
     height: 20px;
     width: 20px;
 }
-input[type=button]{
+
+input[type=submit]{
     border: 1px solid #1a1a1a;
     border-radius: 15px;
     width: auto;
     padding: 10px;
     background-color: #fdfdfd;
 }
+
 label{
     cursor: pointer;
     padding: 0px 20px;
     margin: 0px;
 }
 
-
+/* FOOTER */
 footer{
     background-color: #1a1a1a;
     border-top: 5px solid;
